# CPP3_BrickGame_v2.0

./: CMakeLists.txt  README.md
prototype/: Common.h  Direction.h  Makefile  SnakeController.h  SnakeModel.h  SnakeView.h  snake.cpp  snake_game
prototype_2/: Makefile  SnakeController.h  SnakeView.h  SnakeViewer.cpp  snake.cpp  snake_game
prototype_3/: Common.h  Makefile  SnakeController.h  SnakeModel.h  SnakeView.cpp  SnakeView.h  snake.cpp  snake_game
prototype_4/: Common.h  Makefile  SnakeController.cpp  SnakeController.h  SnakeControllerAPI.h  SnakeModel.cpp  SnakeModel.h  SnakeView.c  SnakeView.h  View.c  View.h  View_1.c  View_2.c  View_3.c  View_4.c  backend.c  backend.h  const.h  front.h  frontend.c  fsm.c  fsm.h  main_menu  main_menu.c  snake.cpp  snake_game  struct.h
src/: Makefile  Makefile copy  Makefile.txt  brick_game.cpp  snake_game
src/brick_game/common/: commonAPI.h  const.h
src/brick_game/controller/: cli_controller.cpp  cli_controller.h  controller.cpp  controller.h  controllerAPI.h  gui_controller.cpp  gui_controller.h
src/brick_game/snake/: SnakeModel.cpp  SnakeModel.h
src/brick_game/tetris/: TetrisModel.c  TetrisModel.h  fsm.c  fsm.h
src/gui/cli/: game_input.c  game_loop.c  game_render.c  main_cli.cpp  main_loop.c  ui.h  ui_helpers.c
src/gui/desktop/qt_viewer/: CMakeLists.txt  main_qt.cpp  qt_viewer.cpp  qt_viewer.h
src/gui/desktop/vscode/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
